--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <h1>We're Getting Married! 💍</h1>
+    <h1>Wedding Invitation💍</h1>
     <h2>May 4, 2024</h2>
     
     <div class="countdown" id="countdown"></div>
